k8s/kubernetes/00-ingress-controller.yaml
apiVersion: networking.k8s.io/v1 # ingress para redireccionar el trafico en el puerto 80 hacia react o django respectivamente
kind: Ingress
metadata:
  name: ingress
  labels: 
    name: ingress
spec:
  rules:
  - host: api.predictionapp.com
    http:
      paths:
      - backend:
          service: 
            name: django-service
            port:
              number: 8000
        pathType: ImplementationSpecific
  - host: predictionapp.com
    http:
      paths:
      - backend:
          service: 
            name: react-service
            port:
              number: 8080
        pathType: ImplementationSpecific
